2500 [x265]                 added custom command line
     [x265]                 added support for 64bit x265
     [x265]                 removed --no-ssim and --no-psnr as they are disabled by default
2499 [Audio Encoder]        fixed TimeStretch support (regression of 2487)
     [Audio Encoder]        enhanced logging
     [Audio Encoder]        added 5.1 downmix if necessary (provided by tebasuna51)
2498 [L-SMASH Indexer]      use the stream_index argument instead of track if using LWLibav*Source. Part II
2497 [L-SMASH Indexer]      use the stream_index argument instead of track if using LWLibav*Source
2496 [MainForm]             enabled Drag & Drop for folders
2495 [x265]                 introduced fastdecode & zerolatency tunings
2494 [x265]                 removed --timinginfo switch. frame rate information is handled automatically now.
2493 [Update]               fixed a crash in some situations if neroaacenc is enabled (regression of 2490)
2492 [Update]               fixed a crash on some systems without visual styles (regression of 2490)
2491 [Update]               added option to hide the question if you would like to update
2490 [Update]               added download progress indicator
     [Update]               added sortable columns
     [Update]               update data will only be refreshed every 1 (development) or 5 (stable) days
     [Update]               internal optimizations
2488 [x265]                 added --timinginfo switch in order to have fps information in the stream
2487 [Audio Encoder]        fixed TimeStretch support (regression of 2383)
     [Audio Encoder]        added dedicated TimeStretch options
     [Audio Encoder]        added 96000 Hz sample rate conversion. Feature request #538
     [Audio Encoder]        cosmetics
2486 [HD Streams Extractor] improved logging
2485 [QAAC]                 allow only specific TVBR values. Please verify your settings.